@@ -8,4 +8,5 @@ Makefile.in
 sbuild-chroot
 sbuild-environment
 sbuild-keyfile
+sbuild-lock
 sbuild-util
